@@ -51,3 +51,10 @@
 .download-icon {
 	background-image: url('%appswebroot%/news/img/download.svg');
 }
+
+#app-settings .importing {
+	background-image: url('%webroot%/core/img/loading.gif'); 
+	background-repeat: no-repeat;
+	background-position: 5px center;
+	background-size: 16px;
+}
