@@ -1,3 +1,8 @@
+owncloud-news (1.601)
+* Remove Google Reader import
+* Replace Google Reader import with export and import of unread and starred articles
+* Set default autoPurgeLimit to 5000. People who update will have to adjust this if they want to
+
 owncloud-news (1.404)
 * Fix bug on postgres databases that would not delete old articles
 
